Fix flee button text wrapping

--- a/client/styles/fleeing_button/components/fleeing_button_canvas.scss
+++ b/client/styles/fleeing_button/components/fleeing_button_canvas.scss
@@ -8,8 +8,8 @@
   position: relative;
 
   .fleeing-button {
+    white-space: nowrap;
     position: absolute;
     transform: translate(-50%, -50%);
-    transition: 0;
   }
 }
